test/files/neg/t3772.check
t3772.scala:7: error: value inner is not a member of object CC
     CC.inner
        ^
t3772.scala:14: error: value outer is not a member of object CC
      CC.outer
         ^
two errors found
